# GroveAgent

./: .gitignore  README.md  agent.py  constants.py  control.py  controlpanel.py  helpers.py  main.py  models.py  observers.py  pyproject.toml  start.sh
.claude/skills/dokumentace/: SKILL.md
components/observers/: base.py  cron.py  dirwatch.py  filetail.py
components/tools/: run_bash.py  scheduler.py  scheduler_check.py  whatsapp.py
docs/: config.example.yaml  mcps.md  observers.md  tools.md  tools_agents.md
evals/: eval.example.py
system/: agent.py  constants.py  helpers.py  logger.py  models.py  prompts.py  routes.py  tasker.py
system/components/mcps/: tasks.py
system/components/observers/: base.py  cron.py  dirwatch.py  filetail.py
system/components/tools/: mailgun_mailer.py  run_bash.py  whatsapp.py
